Fix scroll error by changing overflow:hidden

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
     display:flex;
     flex-direction: column;
-    height: 100vh;
     margin: 0;
-    overflow: hidden;
+    overflow: auto;
     font-family: Roboto, sans-serif;
 }
+
 
 .header {
     background-color: #1F2937;
